Sound Effects Added
- Sound effects for notifications and deleting notifications in the notification history window have now been added.
- Minor changes to the UI has also been implemented.

--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <None Remove="Assets\Add.png" />
+    <None Remove="Assets\NotificationSound.wav" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Assets\NotificationSound.wav" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +24,14 @@
 
   <ItemGroup>
     <Resource Include="Assets\Add.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FileStore\FileStore.csproj" />
   </ItemGroup>
 
 </Project>
