Minor test commit

--- a/WpfApp1/ReleaseSpec.nuspec
+++ b/WpfApp1/ReleaseSpec.nuspec
@@ -7,12 +7,8 @@
     <authors>Christopher Karlsson</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="expression">MIT</license>
-    <projectUrl>http://project_url_here_or_delete_this_line/</projectUrl>
-    <iconUrl>http://icon_url_here_or_delete_this_line/</iconUrl>
     <description>An application that keeps track on streamers live status.</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
-    <copyright>Christopher Karlsson</copyright>
-    <tags>Tag1 Tag2</tags>
+    <copyright>Copyright @ 2021</copyright>
   </metadata>
   
   <files>
