Bad gateway 502 fixed
-TwitchTrack should not crash on a 502 error message from the Twitch Api anymore.

--- a/WpfApp1/TwitchTrack.csproj
+++ b/WpfApp1/TwitchTrack.csproj
@@ -70,6 +70,10 @@
 		<AssemblyOriginatorKeyFile>TwitchTrack_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <DefineConstants>DEBUG;TRACE</DefineConstants>
+	</PropertyGroup>
+
 	<Target Name="GenerateRelease" AfterTargets="AfterBuild" Condition="$(Configuration) == Release">
 		<XmlPeek XmlInputPath="$(NuspecFile)" Query="/package/metadata/id/text()">
 			<Output TaskParameter="Result" ItemName="ID" />
