--- a/WpfApp1/Properties/launchSettings.json
+++ b/WpfApp1/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "TwitchTrack": {
-      "commandName": "Project"
+      "commandName": "Executable",
+      "executablePath": "C:\\Users\\chris\\source\\repos\\WpfApp1\\WpfApp1\\bin\\Debug\\net5.0-windows\\TwitchTrack.exe"
     }
   }
 }
