Added Windows 10 notifications
- When a streamer goes live or offline,  a windows notification triggers.

--- a/WpfApp1/TwitchTrack.csproj
+++ b/WpfApp1/TwitchTrack.csproj
@@ -4,6 +4,7 @@
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net5.0-windows</TargetFramework>
 		<UseWPF>true</UseWPF>
+		<UseWindowsForms>true</UseWindowsForms>
 		<ApplicationIcon>TwitchTrack64.ico</ApplicationIcon>
 	</PropertyGroup>
 
@@ -13,6 +14,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="FontAwesome5" Version="2.1.2" />
+		<PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="NuGet.CommandLine" Version="5.9.1">
 			<PrivateAssets>all</PrivateAssets>
@@ -29,6 +31,15 @@
 		<Resource Include="ClearIcon.png" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="Images\TwitchTrack32.png">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Resources\TwitchTrack64.ico">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 	<PropertyGroup>
 		<NugetTools>$(PkgNuGet_CommandLine)\tools</NugetTools>
 		<SquirrelTools>$(Pkgsquirrel_windows)\tools</SquirrelTools>
@@ -41,9 +52,7 @@
 
 		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 
-		<SignAssembly>true</SignAssembly>
-
-		<AssemblyOriginatorKeyFile>TwitchTrack_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
+		<SignAssembly>false</SignAssembly>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
